Ruta detallada corregida con carga de datos + imagenes de ruta detallada de inca y balcanes

--- a/buscar-rutas.html
+++ b/buscar-rutas.html
@@ -452,7 +452,7 @@
                                     <span class="price-amount">45€</span>
                                     <span class="price-unit">/día</span>
                                 </div>
-                                <a href="detalle-ruta.html?id=1" class="btn btn-primary">Ver ruta</a>
+                                <a href="detalle-ruta.html?id=route_annapurna" class="btn btn-primary">Ver ruta</a>
                             </div>
                         </div>
                     </article>
@@ -500,7 +500,7 @@
                                     <span class="price-amount">30€</span>
                                     <span class="price-unit">/día</span>
                                 </div>
-                                <a href="detalle-ruta.html?id=2" class="btn btn-primary">Ver ruta</a>
+                                <a href="detalle-ruta.html?id=route_camino_santiago" class="btn btn-primary">Ver ruta</a>
                             </div>
                         </div>
                     </article>
@@ -549,7 +549,7 @@
                                     <span class="price-amount">65€</span>
                                     <span class="price-unit">/día</span>
                                 </div>
-                                <a href="detalle-ruta.html?id=3" class="btn btn-primary">Ver ruta</a>
+                                <a href="detalle-ruta.html?id=route_caminoinca" class="btn btn-primary">Ver ruta</a>
                             </div>
                         </div>
                     </article>
@@ -597,7 +597,7 @@
                                     <span class="price-amount">55€</span>
                                     <span class="price-unit">/día</span>
                                 </div>
-                                <a href="detalle-ruta.html?id=4" class="btn btn-primary">Ver ruta</a>
+                                <a href="detalle-ruta.html?id=route_torres_del_paine" class="btn btn-primary">Ver ruta</a>
                             </div>
                         </div>
                     </article>
