--- a/detalle-ruta.html
+++ b/detalle-ruta.html
@@ -12,6 +12,7 @@
     <script src="script/versionb.js"></script>
 </head>
 <body>
+    <script>console.log('DOM cargado, ejecutando scripts...');</script>
     <nav class="navbar">
         <div class="nav-brand">
             <img src="images/Logo.png" height="40" width="40" alt="Logo">
@@ -296,7 +297,7 @@
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
-    <script type="module" src="script/detalle-ruta.js"></script>
+    <script src="script/detalle-ruta.js"></script>
     <script src="script/nav.js"></script>
 </body>
 </html>
