--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
             <li><a href="buscar-rutas.html" data-i18n="nav_routes">Rutas</a></li>
             <li><a href="versionb.html" data-i18n="nav_packs">Packs</a></li>
             <li><a href="blog.html" data-i18n="nav_blog">Blog</a></li>
-            <li><a href="#foro" data-i18n="nav_community">Comunidad</a></li>
+            <li><a href="comunidad.html" data-i18n="nav_community">Comunidad</a></li>
             <li><a href="#contacto" data-i18n="nav_contact">Contacto</a></li>
             <li>
                 <select name="idioma" id="idiomaHeader">
