--- a/contacto.html
+++ b/contacto.html
@@ -28,7 +28,7 @@
             <li><a href="buscar-rutas.html">Rutas</a></li>
             <li><a href="versionb.html">Packs</a></li>
             <li><a href="blog.html">Blog</a></li>
-            <li><a href="#foro">Comunidad</a></li>
+            <li><a href="comunidad.html">Comunidad</a></li>
             <li><a href="contacto.html" class="active">Contacto</a></li>
             <li>
                 <select name="idioma" id="idioma">
