--- a/registro.html
+++ b/registro.html
@@ -25,7 +25,7 @@
             <li><a href="buscar-rutas.html">Rutas</a></li>
             <li><a href="versionb.html">Packs</a></li>
             <li><a href="blog.html">Blog</a></li>
-            <li><a href="#foro">Comunidad</a></li>
+            <li><a href="comunidad.html">Comunidad</a></li>
             <li><a href="contacto.html">Contacto</a></li>
             <li>
                 <select name="idioma" id="idioma">
