Header se ilumina cuando tocas el boton y estás en pagina correspondiente.

--- a/buscar-rutas.html
+++ b/buscar-rutas.html
@@ -23,7 +23,7 @@
         </button>
         <ul class="nav-menu">
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="buscar-rutas.html">Rutas</a></li>
+            <li><a href="buscar-rutas.html" class="active">Rutas</a></li>
             <li><a href="versionb.html">Packs</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="comunidad.html">Comunidad</a></li>
