--- a/comunidad.html
+++ b/comunidad.html
@@ -26,7 +26,7 @@
             <li><a href="buscar-rutas.html" data-i18n="nav_routes">Rutas</a></li>
             <li><a href="versionb.html" data-i18n="nav_packs">Packs</a></li>
             <li><a href="blog.html" data-i18n="nav_blog">Blog</a></li>
-            <li><a href="comunidad.html" data-i18n="nav_community">Comunidad</a></li>
+            <li><a href="comunidad.html" data-i18n="nav_community" class="active">Comunidad</a></li>
             <li><a href="contacto.html" data-i18n="nav_contact">Contacto</a></li>
             <li>
                 <select name="idioma" id="idiomaHeader">
