--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <span></span><span></span><span></span>
         </button>
         <ul class="nav-menu">
-            <li><a href="index.html" data-i18n="nav_home">Inicio</a></li>
+            <li><a href="index.html" data-i18n="nav_home" class="active">Inicio</a></li>
             <li><a href="buscar-rutas.html" data-i18n="nav_routes">Rutas</a></li>
             <li><a href="versionb.html" data-i18n="nav_packs">Packs</a></li>
             <li><a href="blog.html" data-i18n="nav_blog">Blog</a></li>
