--- a/buscar-rutas.html
+++ b/buscar-rutas.html
@@ -24,7 +24,7 @@
         <ul class="nav-menu">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="buscar-rutas.html" class="active">Rutas</a></li>
-            <li><a href="versionb.html">Packs</a></li>
+            <li><a href="otros-rincones.html">Otros rincones</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="comunidad.html">Comunidad</a></li>
             <li><a href="contacto.html">Contacto</a></li>
