--- a/comunidad.html
+++ b/comunidad.html
@@ -24,7 +24,7 @@
         <ul class="nav-menu">
             <li><a href="index.html" data-i18n="nav_home">Inicio</a></li>
             <li><a href="buscar-rutas.html" data-i18n="nav_routes">Rutas</a></li>
-            <li><a href="versionb.html" data-i18n="nav_packs">Packs</a></li>
+            <li><a href="otros-rincones.html" data-i18n="nav_cities">Otros rincones</a></li>
             <li><a href="blog.html" data-i18n="nav_blog">Blog</a></li>
             <li><a href="comunidad.html" data-i18n="nav_community" class="active">Comunidad</a></li>
             <li><a href="contacto.html" data-i18n="nav_contact">Contacto</a></li>
