--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="script/i18n.js" defer></script>
 </head>
-
-
-
 <body>
     <nav class="navbar">
         <div class="nav-brand">
@@ -25,7 +22,7 @@
         <ul class="nav-menu">
             <li><a href="index.html" data-i18n="nav_home" class="active">Inicio</a></li>
             <li><a href="buscar-rutas.html" data-i18n="nav_routes">Rutas</a></li>
-            <li><a href="versionb.html" data-i18n="nav_packs">Packs</a></li>
+            <li><a href="otros-rincones.html" data-i18n="nav_cities">Otros rincones</a></li>
             <li><a href="blog.html" data-i18n="nav_blog">Blog</a></li>
             <li><a href="comunidad.html" data-i18n="nav_community">Comunidad</a></li>
             <li><a href="contacto.html" data-i18n="nav_contact">Contacto</a></li>
