--- a/registro.html
+++ b/registro.html
@@ -23,7 +23,7 @@
         <ul class="nav-menu">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="buscar-rutas.html">Rutas</a></li>
-            <li><a href="versionb.html">Packs</a></li>
+            <li><a href="otros-rincones.html">Packs</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="comunidad.html">Comunidad</a></li>
             <li><a href="contacto.html">Contacto</a></li>
