--- a/comunidad.html
+++ b/comunidad.html
@@ -43,8 +43,16 @@
 
         <!-- Perfil en Navbar -->
         <div class="perfil-wrapper">
-        <span id="nombreUsuario" class="nombre-usuario"></span>
-        <img id="fotoPerfil" class="foto-perfil" src="img/default.png">
+            <span id="nombreUsuario" class="nombre-usuario"></span>
+            
+            <!-- Botón Mi Cuenta (solo visible sin login) -->
+            <button id="botonCuenta" class="btn btn-primary">
+                <i class="fas fa-user-circle"></i>
+                <span>Mi Cuenta</span>
+            </button>
+            
+            <!-- Foto de perfil (solo visible con login) -->
+            <img id="fotoPerfil" class="foto-perfil" src="img/default.png" style="display: none;">
 
             <div class="user-menu" id="userMenu">
                 <button id="btnMiPerfil" class="btn btn-primary" data-i18n="profile_profile">Mi perfil</button>
