--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <button class="btn-icon" aria-label="Buscar">
                 <i class="fas fa-search"></i>
             </button>
+            <!-- Mi Cuenta Button -->
             <a href="registro.html" class="btn btn-primary">Mi Cuenta</a>
         </div>
     </nav>
