--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <i class="fas fa-search"></i>
             </button>
             <!-- Mi Cuenta Button -->
-            <a href="registro.html" class="btn btn-primary">Mi Cuenta</a>
+            <a href="registro.html" class="btn btn-primary" data-i18n="btn_my_account">Mi Cuenta</a>
         </div>
     </nav>
 
@@ -136,7 +136,7 @@
                                     <i class="fas fa-route"></i> 12 rutas
                                 </span>
                             </div>
-                            <a href="buscar-rutas.html" class="btn btn-sm btn-primary">Explorar</a>
+                            <a href="buscar-rutas.html" class="btn btn-sm btn-primary" data-i18n="btn_explore">Explorar</a>
                         </div>
                     </article>
 
@@ -157,7 +157,7 @@
                                     <i class="fas fa-route"></i> 18 rutas
                                 </span>
                             </div>
-                            <a href="buscar-rutas.html" class="btn btn-sm btn-primary">Explorar</a>
+                            <a href="buscar-rutas.html" class="btn btn-sm btn-primary" data-i18n="btn_explore">Explorar</a>
                         </div>
                     </article>
 
@@ -178,7 +178,7 @@
                                     <i class="fas fa-route"></i> 15 rutas
                                 </span>
                             </div>
-                            <a href="buscar-rutas.html" class="btn btn-sm btn-primary">Explorar</a>
+                            <a href="buscar-rutas.html" class="btn btn-sm btn-primary" data-i18n="btn_explore">Explorar</a>
                         </div>
                     </article>
 
@@ -199,7 +199,7 @@
                                     <i class="fas fa-route"></i> 10 rutas
                                 </span>
                             </div>
-                            <a href="buscar-rutas.html" class="btn btn-sm btn-primary">Explorar</a>
+                            <a href="buscar-rutas.html" class="btn btn-sm btn-primary" data-i18n="btn_explore">Explorar</a>
                         </div>
                     </article>
 
@@ -220,7 +220,7 @@
                                     <i class="fas fa-route"></i> 8 rutas
                                 </span>
                             </div>
-                            <a href="buscar-rutas.html" class="btn btn-sm btn-primary">Explorar</a>
+                            <a href="buscar-rutas.html" class="btn btn-sm btn-primary" data-i18n="btn_explore">Explorar</a>
                         </div>
                     </article>
 
